Text color changes

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1036,7 +1036,7 @@ header img {
 }
 
 .intro_paragraph p span.features-special {
-  color: black;
+  color: #6be8bf;
   font-size: 2rem;
   font-weight: 600;
 }
