--- a/src/styles/partials/_projects.scss
+++ b/src/styles/partials/_projects.scss
@@ -2,11 +2,11 @@
 .container {
   @include flex(column, center);
   width: 90vw;
-  
+
   max-width: 1200px;
   margin-bottom: 200px;
-  margin-top: 100px;   
-   
+  margin-top: 100px;
+
     .project-heading{
       margin-bottom: 30px;
       margin-top: 50px;
@@ -31,11 +31,11 @@
     margin-top: 5%;
     align-content: center;
     @include flex(row, flex-start);
-    
+
     a {
         text-decoration: none;
         color: white;
-        flex: 1 1 50%;    
+        flex: 1 1 50%;
     }
     div {
         @include flex(column, center);
@@ -43,11 +43,11 @@
         overflow: hidden;
         margin: 0.5rem 0rem;
         padding: 20px;
-       
+
         @media only screen and (min-width: 601px) {
           margin: 0.5rem 0.5rem;
-         
-        }  
+
+        }
         .tech-stack, .resource {
           position: relative;
           padding-top: 1em;
@@ -70,7 +70,7 @@
           margin-right: 3em;
         }
 
-        
+
     }
 }
 
@@ -104,38 +104,38 @@
   }
 
 
-/* Phone Styles */ 
+/* Phone Styles */
 @media only screen and (max-width: 600px) {
-  .project-heading{ 
+  .project-heading{
     .project{
       font-size: 1.6em !important;
     }
     p {
-      font-size: 0.8em !important; 
+      font-size: 0.8em !important;
     }
   }
    .container{
      align-content: center !important;
-   
+
      div {
        justify-content: center;
-     
+
      }
    }
-   .all-projects{ 
+   .all-projects{
      align-content: center !important;
     h3 {
-      font-size: 1.4em !important; 
+      font-size: 1.4em !important;
     }
 
     .tech-stack, .resource {
-      font-size: 0.9em !important; 
+      font-size: 0.9em !important;
       width: 250px;
     }
-      
+
    }
-   
-  
+
+
 
 
 
@@ -147,26 +147,26 @@
       font-size: 1.6em !important;
     }
     p {
-      font-size: 0.8em !important; 
+      font-size: 0.8em !important;
     }
    }
 
-  
+
   }
 
 
-/* Desktop Styles */ 
+/* Desktop Styles */
 @media only screen and (min-width:1201px) {
   .container {
-    
-    .container {	  
-      width: 100vw;	      
-  }	  
- }	
+
+    .container {
+      width: 100vw;
+  }
+ }
  }
 
 
-/* Individual Project Styles */ 
+/* Individual Project Styles */
 .one-projects{
   margin-top: 5%;
   @include flex(row, flex-start);
@@ -174,7 +174,7 @@
     .project-single{
       font-size: 3em;
       margin-bottom: 5px;
-      
+
     }
     p {
       font-size: 1em;
@@ -188,7 +188,7 @@
   .resources{
     margin-top: 20px;
     margin-bottom: 20px;
-   
+
     a {
       color: black;
       display: inline-block;
@@ -196,12 +196,13 @@
       &:after {
         content: " / ";
       }
-      &:hover{ 
+      &:hover,
+      &:focus {
         background-color: $alternate-color;
         cursor: pointer;
       }
     }
-    
+
   }
 
   .tech-stack {
@@ -244,7 +245,7 @@
      margin: 0 auto;
      margin-top: 15px !important;
      margin-bottom: 15px !important;
-     
+
      height: auto;
 
    }
@@ -256,17 +257,17 @@
      line-height: 1.5em;
      font-weight: 500;
      width: 100%;
-     
+
    }
  }
-}    
-/* Tablet Styles */ 
+}
+/* Tablet Styles */
 @media only screen and (min-width:600px) and (max-width:1026px) {
   .project-content {
-    
+
     .content{
       margin: 35px !important;
-      
+
      }
      img{
       padding: 20px;
@@ -274,7 +275,7 @@
     }
 
 }
-/* Desktop Styles */ 
+/* Desktop Styles */
 @media only screen and (min-width:1026px) {
   .project-content {
     flex-flow: row nowrap !important;
@@ -293,4 +294,3 @@
     }
     }
   }
-  
